# LIDeepDet

./: .gitignore  Predict.py  README.md  main.ipynb  main.py  pyproject.toml
Features/: _progress.txt
