[project]
name = "lideepdet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "mtcnn>=1.0.0",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "opencv-contrib-python>=4.11.0.86",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
]
